Add the scrollspy feature

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                                 <ul class="navbar-nav ">
                                     <li class="nav-item">
-                                        <a class="nav-link active" aria-current="page" href="#">Portfolio</a>
+                                        <a class="nav-link active" aria-current="page" href="#works">Portfolio</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="">About</a>
+                                        <a class="nav-link" href="#about">About</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="">Contact</a>
+                                        <a class="nav-link" href="#contact">Contact</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="">
@@ -72,7 +72,7 @@
                         
         </main>
 
-                <section class="card-body">
+                <section id="works" class="card-body">
                     <div class="works-section container grid">
 `                       <div class="row d-flex flex-row ">
                             <div class="g-col-2 recent-works"><h1 class="title d-flex ">My Recent Works </h1></div>
@@ -121,7 +121,7 @@
                                                                                 <a class="btn btn-outline-dark" href="https://getbootstrap.com/" role="button">bootstrap</a>                                                                        
                                                                                 <a class="btn btn-outline-dark" href="https://www.ruby-lang.org/en/" role="button">Ruby</a>
                                                                             </div>
-                                                                            <a class="btn mt-1 see-project text-light"href="">See project</a>
+                                                                            <a class="btn mt-1 see-project text-dark"href="">See project</a>
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -141,7 +141,7 @@
                                                                                 <a class="btn btn-outline-dark" href="https://getbootstrap.com/" role="button">bootstrap</a>                                                                        
                                                                                 <a class="btn btn-outline-dark" href="https://www.ruby-lang.org/en/" role="button">Ruby</a>
                                                                             </div>
-                                                                            <a class="btn mt-1 see-project text-light"href="">See project</a>
+                                                                            <a class="btn mt-1 see-project text-dark"href="">See project</a>
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -160,7 +160,7 @@
                                                                                 <a class="btn btn-outline-dark" href="https://getbootstrap.com/" role="button">bootstrap</a>                                                                        
                                                                                 <a class="btn btn-outline-dark" href="https://www.ruby-lang.org/en/" role="button">Ruby</a>
                                                                             </div>
-                                                                            <a class="btn  mt-1 see-project text-light"href="">See project</a>
+                                                                            <a class="btn  mt-1 see-project text-dark"href="">See project</a>
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -179,7 +179,7 @@
                                                                                 <a class="btn btn-outline-dark" href="https://getbootstrap.com/" role="button">bootstrap</a>                                                                        
                                                                                 <a class="btn btn-outline-dark" href="https://www.ruby-lang.org/en/" role="button">Ruby</a>
                                                                             </div>
-                                                                            <a class="btn  mt-1 see-project text-light"href="">See project</a>
+                                                                            <a class="btn  mt-1 see-project text-dark"href="">See project</a>
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -198,7 +198,7 @@
                                                                                 <a class="btn btn-outline-dark" href="https://getbootstrap.com/" role="button">bootstrap</a>                                                                        
                                                                                 <a class="btn btn-outline-dark" href="https://www.ruby-lang.org/en/" role="button">Ruby</a>
                                                                             </div>
-                                                                            <a class="btn  mt-1 see-project text-light"href="">See project</a>
+                                                                            <a class="btn  mt-1 see-project text-dark"href="">See project</a>
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -217,7 +217,7 @@
                                                                                 <a class="btn btn-outline-dark" href="https://getbootstrap.com/" role="button">bootstrap</a>                                                                        
                                                                                 <a class="btn btn-outline-dark" href="https://www.ruby-lang.org/en/" role="button">Ruby</a>
                                                                             </div>
-                                                                            <a class="btn  mt-1 see-project text-light"href="">See project</a></span>
+                                                                            <a class="btn  mt-1 see-project text-dark"href="">See project</a></span>
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -225,8 +225,8 @@
                                                         </div>
                                                     </div> 
                 </section>
-                <section class="container-fluid section-3 position-relative mt-5 pt-5 pb-5">
-                    <div class="About container">
+                <section  class="container-fluid section-3 position-relative mt-5 pt-5 pb-5">
+                    <div id="about" class="About container">
                         <div class="about-top container-fluid">
                             <div class=" row">
                                 <div class="about-text col-4">
@@ -276,7 +276,7 @@
                         
                     </div>
                 </section>
-           <section class="section_3 container">
+           <section id="contact" class="section_3 container">
             <div class="row mt-5">
                 <div class="col-6">
                        <h2 class="description-2">I'm always interested in hearing about new projects,
